# Nokia-PK-2022

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  codeql.yml
UE/: main.cpp
UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp
UE/Application/Constants/: MenuConstans.h
UE/Application/Models/: Sms.cpp  Sms.hpp  SmsDb.cpp  SmsDb.hpp
UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
UE/Application/SMS/: SMS.cpp  SMS.hpp  SMS_DB.cpp  SMS_DB.hpp
UE/Application/SMSDB/: BasicSMSDatabase.cpp  BasicSMSDatabase.hpp  ISMSDatabase.hpp  ITextMessege.hpp  SMS.cpp  SMS.hpp
UE/Application/Sms/: Sms.cpp  Sms.hpp  SmsDb.cpp  SmsDb.hpp
UE/Application/States/: BaseState.cpp  BaseState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  ReceivingCallRequest.cpp  ReceivingCallRequest.hpp  SendingCallRequest.cpp  SendingCallRequest.hpp  SendingSmsState.cpp  SendingSmsState.hpp  TalkingState.cpp  TalkingState.hpp  ViewSmsListState.cpp  ViewSmsListState.hpp  ViewSmsState.cpp  ViewSmsState.hpp  ViewingSingleSmsState.cpp  ViewingSingleSmsState.hpp  ViewingSmsState.cpp  ViewingSmsState.hpp
UE/QtApplicationEnvironment/GUI/: QtUeGui.cpp
UE/Tests/Application/: ApplicationTestSuite.cpp  CMakeLists.txt
UE/Tests/Application/Mocks/: IBtsPortMock.hpp  (+6 more)
docs/: InitialPortsDesign.plantuml  InitialStateDesign.plantuml  README.md
lectures/: README.md
(+3 files in other folders)
